; ModuleID = '/home/carl/AnghaBench/postgres/contrib/pg_stat_statements/extr_pg_stat_statements.c__PG_fini.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/pg_stat_statements/extr_pg_stat_statements.c__PG_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@prev_shmem_startup_hook = common dso_local global i32 0, align 4
@shmem_startup_hook = common dso_local global i32 0, align 4
@prev_post_parse_analyze_hook = common dso_local global i32 0, align 4
@post_parse_analyze_hook = common dso_local global i32 0, align 4
@prev_ExecutorStart = common dso_local global i32 0, align 4
@ExecutorStart_hook = common dso_local global i32 0, align 4
@prev_ExecutorRun = common dso_local global i32 0, align 4
@ExecutorRun_hook = common dso_local global i32 0, align 4
@prev_ExecutorFinish = common dso_local global i32 0, align 4
@ExecutorFinish_hook = common dso_local global i32 0, align 4
@prev_ExecutorEnd = common dso_local global i32 0, align 4
@ExecutorEnd_hook = common dso_local global i32 0, align 4
@prev_ProcessUtility = common dso_local global i32 0, align 4
@ProcessUtility_hook = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_PG_fini() #0 {
  %1 = load i32, i32* @prev_shmem_startup_hook, align 4
  store i32 %1, i32* @shmem_startup_hook, align 4
  %2 = load i32, i32* @prev_post_parse_analyze_hook, align 4
  store i32 %2, i32* @post_parse_analyze_hook, align 4
  %3 = load i32, i32* @prev_ExecutorStart, align 4
  store i32 %3, i32* @ExecutorStart_hook, align 4
  %4 = load i32, i32* @prev_ExecutorRun, align 4
  store i32 %4, i32* @ExecutorRun_hook, align 4
  %5 = load i32, i32* @prev_ExecutorFinish, align 4
  store i32 %5, i32* @ExecutorFinish_hook, align 4
  %6 = load i32, i32* @prev_ExecutorEnd, align 4
  store i32 %6, i32* @ExecutorEnd_hook, align 4
  %7 = load i32, i32* @prev_ProcessUtility, align 4
  store i32 %7, i32* @ProcessUtility_hook, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
